Removed thymeleaf dependency. Now using javascript for front end operations.