@@ -1,8 +1,9 @@
 package bg.softuni.bookstore.service;
 
-import bg.softuni.bookstore.domain.dto.UpdateBookDto;
+import bg.softuni.bookstore.domain.dto.PageResult;
 import bg.softuni.bookstore.domain.dto.book.ExportBookDto;
 import bg.softuni.bookstore.domain.dto.book.ImportBookDto;
+import bg.softuni.bookstore.domain.dto.book.UpdateBookDto;
 import bg.softuni.bookstore.domain.entity.Author;
 import bg.softuni.bookstore.domain.entity.Book;
 import bg.softuni.bookstore.repository.BookRepository;
@@ -10,15 +11,15 @@ import com.google.gson.Gson;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,23 +35,64 @@ public class BookService {
 
     private static final String BOOKS_FILE_PATH = "src/main/resources/dbinit/books.json";
 
-
-    public List<ExportBookDto> getAllBooks() {
-        List<Book> allBooks = bookRepository.findAll();
-        return allBooks.stream()
+    public PageResult<ExportBookDto> getAllBooks(Pageable pageable) {
+        Page<Book> currentPage = bookRepository.findAll(pageable);
+        List<ExportBookDto> exportBookDtos = currentPage.stream()
                 .map(book -> modelMapper.map(book, ExportBookDto.class))
-                .collect(Collectors.toList());
+                .toList();
+        return new PageResult<>(bookRepository.count(), exportBookDtos);
     }
 
+    public Book getBookByISBN(String ISBN) {
+        Optional<Book> optionalBook = bookRepository.findByISBN(ISBN);
+        if (optionalBook.isEmpty()) {
+            throw new IllegalArgumentException("No such book with given ISBN!");
+        }
+        return optionalBook.get();
+    }
 
-    public boolean areImported() {
-        return bookRepository.count() > 0;
+    public void delete(String isbn) {
+        if (!bookRepository.existsByISBN(isbn)) {
+            throw new IllegalArgumentException("No book with given isbn was found!");
+        }
+        bookRepository.deleteByISBN(isbn);
+    }
+
+    public void addBook(ImportBookDto importBookDto) {
+        Optional<Book> optionalBook = bookRepository.findByISBN(importBookDto.getISBN());
+        if (optionalBook.isPresent()) {
+            throw new IllegalArgumentException("Book with given isbn already exists!");
+        }
+        Book book = modelMapper.map(importBookDto, Book.class);
+        bookRepository.save(book);
+    }
+
+    public long getBooksCount() {
+        return bookRepository.count();
+    }
+
+    public Book getBookById(Long bookId) {
+        Optional<Book> optionalBook = bookRepository.findById(bookId);
+        if (optionalBook.isEmpty()) {
+            throw new IllegalArgumentException("No book with given id was found!");
+        }
+        return optionalBook.get();
+    }
+
+    public void updateBook(String isbn, UpdateBookDto bookImportDto) {
+        //ToDo
+    }
+
+    public long getCount() {
+        return bookRepository.count();
     }
 
     public void importBooks() throws IOException {
+        if (areImported()) {
+            return;
+        }
 
         ImportBookDto[] importBookDtos = gson.fromJson(readBooksFromFile(), ImportBookDto[].class);
-
         StringBuilder stringBuilder = new StringBuilder();
 
         for (@Valid ImportBookDto importBookDto : importBookDtos) {
@@ -63,34 +105,11 @@ public class BookService {
         System.out.println(stringBuilder);
     }
 
+    private boolean areImported() {
+        return bookRepository.count() > 0;
+    }
+
     private String readBooksFromFile() throws IOException {
         return Files.readString(Path.of(BOOKS_FILE_PATH));
-    }
-
-    public Book getBookByISBN(String ISBN) {
-        Optional<Book> optionalBook = bookRepository.findByISBN(ISBN);
-        if (optionalBook.isEmpty()) {
-            throw new IllegalArgumentException("No such book with given ISBN!");
-        }
-        return optionalBook.get();
-    }
-
-    public long getCount() {
-        return bookRepository.count();
-    }
-
-    public void delete(String isbn) {
-        if (!bookRepository.existsByISBN(isbn)) {
-            throw new IllegalArgumentException("No book with given isbn was found!");
-        }
-        bookRepository.deleteByISBN(isbn);
-    }
-
-    public void addBook(ImportBookDto book) {
-        //ToDo
-    }
-
-    public void updateBook(String isbn, UpdateBookDto bookImportDto) {
-        //ToDo
     }
 }
